--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="assets/img/logoipsum-245.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/calculator.png" type="image/x-icon">
 </head>
 <body>
     <div class="container">
